--- a/report.tex
+++ b/report.tex
@@ -13,10 +13,10 @@
 \begin{document}
 
 % Define document title and author
-    \title{Guidelines for Writing a Seminar Report}
+    \title{Testing Effects of Transfection on Mammalian Cytokine RNA Expression}
     \author{Austin Mitchell Vecchio
-    \thanks{Advisor: Dipl.--Ing.~Firstname Lastname, Lehrstuhl f\"ur Nachrichtentechnik, TUM, WS 2050/2051.}}
-    \markboth{Hauptseminar Digitale Kommunikationssysteme}{}
+%    \thanks{Advisor: Dipl.--Ing.~Firstname Lastname, Lehrstuhl f\"ur Nachrichtentechnik, TUM, WS 2050/2051.}}
+%    \markboth{Hauptseminar Digitale Kommunikationssysteme}{}
     \maketitle
 
 % Write abstract here
@@ -38,6 +38,9 @@
     The report should be a self-contained report, so that it can be understood without studying additional literature.
 
 \section{Results}
+    \subsection{}
+    \subsection{}
+    \subsection{}
     The report can be written in \LaTeX{} or Microsoft Word, but \LaTeX{} is definitely preferred.
     Its appearance should be as close to this document as possible to achieve consistency in the proceedings.
 
