--- a/report.tex
+++ b/report.tex
@@ -31,16 +31,11 @@
 
 % Main Part
 \section{Methods}
-    % LaTeX takes complete care of your document layout ...
-    The presentation's content is summarized in the report in 4~pages.
-    % ... but you can insert a line break manually with two backslashes, if needed: \\
-    The author should fill, but not exceed, this space. \\
-    The report should be a self-contained report, so that it can be understood without studying additional literature.
+    \subsection{Purification}
+    \subsection{Reverse Transcription}
+    \subsection{Qt PCR}
 
 \section{Results}
-    \subsection{}
-    \subsection{}
-    \subsection{}
     The report can be written in \LaTeX{} or Microsoft Word, but \LaTeX{} is definitely preferred.
     Its appearance should be as close to this document as possible to achieve consistency in the proceedings.
 
