--- a/report.tex
+++ b/report.tex
@@ -34,6 +34,8 @@
     \subsection{Purification}
     \subsection{Reverse Transcription}
     \subsection{Qt PCR}
+    \subsection{Analysis}
+        Used \Delta \Delta ct method
 
 \section{Results}
     The report can be written in \LaTeX{} or Microsoft Word, but \LaTeX{} is definitely preferred.
