--- a/pdf/report.tex
+++ b/pdf/report.tex
@@ -9,13 +9,16 @@
 \usepackage{amsmath}
 %\usepackage{array}
 
+% Package Settings
+\graphicspath{ {images/} }
+
 % Your document starts here!
 \begin{document}
 
 % Define document title and author
     \title{Testing Effects of Transfection on Mammalian Cytokine RNA Expression}
     \author{Austin Mitchell Vecchio}
-%    \thanks{Advisor: Dipl.--Ing.~Michelle Ammerman, Lehrstuhl f\"ur Nachrichtentechnik, TUM, WS 2050/2051.}}
+    \thanks{Advisor: Dipl.--Ing.~Michelle Ammerman, Lehrstuhl f\"ur Nachrichtentechnik, TUM, WS 2050/2051.}}
 %    \markboth{Hauptseminar Digitale Kommunikationssysteme}{}
     \maketitle
 
