Properly using authors

--- a/pdf/report.tex
+++ b/pdf/report.tex
@@ -17,7 +17,7 @@
 
 % Define document title and author
     \title{Testing Effects of Transfection on Mammalian Cytokine RNA Expression}
-    \author{Austin Mitchell Vecchio}
+    \author{Austin Mitchell Vecchio
     \thanks{Advisor: Dipl.--Ing.~Michelle Ammerman, Lehrstuhl f\"ur Nachrichtentechnik, TUM, WS 2050/2051.}}
 %    \markboth{Hauptseminar Digitale Kommunikationssysteme}{}
     \maketitle
