--- a/pdf/report.tex
+++ b/pdf/report.tex
@@ -19,7 +19,7 @@
     \title{Testing Effects of Transfection on Mammalian Cytokine RNA Expression}
     \author{Austin Mitchell Vecchio
     \thanks{Advisor: Dipl.--Ing.~Michelle Ammerman, Lehrstuhl f\"ur Nachrichtentechnik, TUM, WS 2050/2051.}}
-%    \markboth{Hauptseminar Digitale Kommunikationssysteme}{}
+    \markboth{Hauptseminar Digitale Kommunikationssysteme}{}
     \maketitle
 
 % Write abstract here
