--- a/report.tex
+++ b/report.tex
@@ -24,6 +24,7 @@
 
 % Write abstract here
 \begin{abstract}
+    \beta -actin INF\alpha
     The short abstract (50-80 words) is intended to give the reader an overview of the work.
 \end{abstract}
 
@@ -42,7 +43,8 @@
         Used \Delta \Delta ct method
 
 \section{Results}
-  The mRNA was purified and converted to cDNA. THe resulting concentration was relatively high compared to peers. This eludes that the treatment for these cells of polycationic DNA for 24 hours could result in higher transcription rates.
+  The mRNA was purified and converted to cDNA. THe resulting concentration was relatively high compared to peers. This eludes that the 
+  treatment for these cells of polycationic DNA for 24 hours could result in higher transcription rates.
 
     The report can be written in \LaTeX{} or Microsoft Word, but \LaTeX{} is definitely preferred.
     Its appearance should be as close to this document as possible to achieve consistency in the proceedings.
@@ -64,6 +66,17 @@
     Figures and tables should be labeled and numbered, such as in Table~\ref{tab:simParameters} and Fig.~\ref{fig:tf_plot}.
 
     % This is how you define a table: the [!hbt] means that LaTeX is forced (by the !) to place the table exactly here (by h), or if that doesnt work because of a pagebreak or so, it tries to place the table to the bottom of the page (by b) or the top (by t).
+
+%Tasha
+%Micah
+%Nick
+%Austin
+%-rt controls
+%NTC
+
+%IL6 INFA B acctin RPL13A
+%
+%H
     \begin{table}[!hbt]
         % Center the table
         \begin{center}
@@ -71,19 +84,28 @@
         \caption{Simulation Parameters}
         \label{tab:simParameters}
         % Table itself: here we have two columns which are centered and have lines to the left, right and in the middle: |c|c|
-        \begin{tabular}{|c|c|}
-            % To create a horizontal line, type \hline
+        \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
             \hline
-            % To end a column type &
-            % For a linebreak type \\
-            Information message length & $k=16000$ bit \\
+            1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 \\
             \hline
-            Radio segment size & $b=160$ bit \\
+            A & & & & & & & & & & & \\
             \hline
-            Rate of component codes & $R_{cc}=1/3$\\
+            B & & & & & & & & & & & \\
             \hline
-            Polynomial of component encoders & $[1 , 33/37 , 25/37]_8$\\
+            C & & & & & & & & & & & \\
             \hline
+            D & & & & & & & & & & & \\
+            \hline
+            E Ts & Ni & AV & Ts & Ni & AV & Ts & Ni & AV & Ts & Ni & AV\\
+            \hline
+            F Ts & Ni & AV & Ts & Ni & AV & Ts & Ni & AV & Ts & Ni & AV\\
+            \hline
+            G Mi -RT & Mi NTC & (blank) & Mi -RT & Mi NTC & (blank) & Mi -RT & Mi NTC & (blank) & Mi -RT & Mi NTC & (blank)\\
+            \hline
+            H & & & & & & & & & & & \\
+            \hline
+
+
         \end{tabular}
         \end{center}
     \end{table}
