--- a/pdf/report.tex
+++ b/pdf/report.tex
@@ -12,11 +12,10 @@
 % Package Settings
 \graphicspath{ {images/} }
 
-% Your document starts here!
 \begin{document}
 
 % Define document title and author
-    \title{Testing Effects of Transfection on Mammalian Cytokine RNA Expression}
+    \title{Testing the Effects of Transfection on Mammalian Cytokine RNA Expression}
     \author{Austin Mitchell Vecchio
     \thanks{Advisor: Dipl.--Ing.~Michelle Ammerman, Lehrstuhl f\"ur Nachrichtentechnik, TUM, WS 2050/2051.}}
     \markboth{Hauptseminar Digitale Kommunikationssysteme}{}
@@ -24,7 +23,8 @@
 
 % Write abstract here
 \begin{abstract}
-    The short abstract (50-80 words) is intended to give the reader an overview of the work.
+  This experiment aims to study the effect of genetic expression on polyplex treated cells against &\beta&-actin and INF&\alpha&.
+
 \end{abstract}
 
 % Each section begins with a \section{title} command
@@ -32,87 +32,184 @@
     % \PARstart{}{} creates a tall first letter for this first paragraph
     %\PARstart{T}{his} section introduces the topic and leads the reader on to the main part.
 
+    The mRNA sampl
+
+Test the effects on
+
+Each student was given a sample as follows
+
+Poly24 Av
+Poly24 Ts
+Just Cells
+No Wash
+
 % Main Part
 \section{Methods}
     \subsection{Purification}
+      mRNA
+
     \subsection{Reverse Transcription}
       The mRNA must be converted into cDNA.
+
     \subsection{Qt PCR}
-    \subsection{Analysis}
-        Used \Delta \Delta ct method
-
-\section{Results}
-  The mRNA was purified and converted to cDNA. THe resulting concentration was relatively high compared to peers. This eludes that the treatment for these cells of polycationic DNA for 24 hours could result in higher transcription rates.
-
-    The report can be written in \LaTeX{} or Microsoft Word, but \LaTeX{} is definitely preferred.
-    Its appearance should be as close to this document as possible to achieve consistency in the proceedings.
-
-    % You can cite a book or paper by using \cite{reference}.
-    % The references will be defined at the end of this .tex file in the bibliography
-    References should be cited as numbers, and should be ordered by their appearance (example: ``... as shown in \cite{HOP96}, ...'').
-    Only references that are actually cited can be listed in the references section.
-    The references' format should be evident from the examples in this text.
-
-    References should be of academic character and should be published and accessible.
-    Your advisor can answer your questions regarding literature research.
-    You must cite all used sources.
-    Examples of good references include text books and scientific journals or conference proceedings.
-    If possible, citing internet pages should be avoided. In particular, Wikipedia is \emph{not} an appropriate reference in academic reports.
-    Avoiding references in languages other than English is recommended.
-
-    % You can reference tables and figure by using the \ref{label} command. Each table and figure needs to have a UNIQUE label.
-    Figures and tables should be labeled and numbered, such as in Table~\ref{tab:simParameters} and Fig.~\ref{fig:tf_plot}.
-
-    % This is how you define a table: the [!hbt] means that LaTeX is forced (by the !) to place the table exactly here (by h), or if that doesnt work because of a pagebreak or so, it tries to place the table to the bottom of the page (by b) or the top (by t).
     \begin{table}[!hbt]
-        % Center the table
-        \begin{center}
-        % Fold Inductions
-        \caption{Simulation Parameters}
-        \label{tab:simParameters}
-        % Table itself: here we have two columns which are centered and have lines to the left, right and in the middle: |c|c|
-        \begin{tabular}{|c|c|}
-            % To create a horizontal line, type \hline
-            \hline
-            % To end a column type &
-            % For a linebreak type \\
-            Information message length & $k=16000$ bit \\
-            \hline
-            Radio segment size & $b=160$ bit \\
-            \hline
-            Rate of component codes & $R_{cc}=1/3$\\
-            \hline
-            Polynomial of component encoders & $[1 , 33/37 , 25/37]_8$\\
-            \hline
-        \end{tabular}
-        \end{center}
+      % Center the table
+      \begin{center}
+      \caption{cDNA Concentrations}
+      \label{tab:simParameters}
+      \begin{tabular}{|c|c|c|}
+        \hline
+        INFA & (Ts, AV, Mi) & 1.32 \\
+        \hline
+        INFA & (Ni) & 11.79 \\
+        \hline
+        $\beta$-Actin & (Ts, AV, Mi) & 2.00 \\
+        \hline
+        $\beta$-Actin & (Ni) & 2.9 \\
+        \hline
+      \end{tabular}
+      \end{center}
     \end{table}
 
-    % If you have questions about how to write mathematical formulas in LaTeX, please read a LaTeX book or the 'Not So Short Introduction to LaTeX': tobi.oetiker.ch/lshort/lshort.pdf
+    The concentrations of cDNA for Ts, Av and Mi were all around 100ng/ $\mu$ L. Therefore one set of calculations can be used for all three
+    experiments. The concentrations of Ni, however, were reported ot be 11.2ng/ $\mu$ L and thus, had to have a different set of calculations.
 
-    % This is how you include a eps figure in your document. LaTeX only accepts EPS or TIFF files.
-    \begin{figure}[!hbt]
-        % Center the figure.
-        \begin{center}
-        % Include the eps file, scale it such that it's width equals the column width. You can also put width=8cm for example...
-        \includegraphics[width=\columnwidth]{plot_tf}
-        % Create a subtitle for the figure.
-        \caption{Simulation results on the AWGN channel. Average throughput $k/n$ vs $E_s/N_0$.}
-        % Define the label of the figure. It's good to use 'fig:title', so you know that the label belongs to a figure.
-        \label{fig:tf_plot}
-        \end{center}
-    \end{figure}
+    \subsection{Analysis}
+
+        Used $\Delta$\Delta$ct method was used in calculating fold inductions.
+
+\section{Results}
+  \subsection{Qubit}
+    \begin{table}[!hbt]
+      % Center the table
+      \begin{center}
+      % Fold Inductions
+      \caption{Qubit Results}
+      \label{tab:simParameters}
+      % Table itself: here we have two columns which are centered and have lines to the left, right and in the middle: |c|c|
+      \begin{tabular}{|c|c|}
+      \hline
+      SD1 & 54.27 \\
+      \hline
+      SD2 & 1057.52 \\
+      \hline
+      Tk & 8.75 \\
+      \hline
+      DA & 68.0 \\
+      \hline
+      AV & 487.0 \\
+      \hline
+      Tk & 28.0 \\
+      \hline
+      \end{tabular}
+      \end{center}
+    \end{table}
+
+  \subsection{Q-PCR}
+    \begin{table}[!hbt]
+      % Center the table
+      \begin{center}
+      % Fold Inductions
+      \caption{Qubit Results}
+      \label{tab:simParameters}
+      % Table itself: here we have two columns which are centered and have lines to the left, right and in the middle: |c|c|
+      \begin{tabular}{|c|c|}
+      \hline
+      SD1 & 54.27 \\
+      \hline
+      SD2 & 1057.52 \\
+      \hline
+      Tk & 8.75 \\
+      \hline
+      DA & 68.0 \\
+      \hline
+      AV & 487.0 \\
+      \hline
+      Tk & 28.0 \\
+      \hline
+      \end{tabular}
+      \end{center}
+    \end{table}
+
+
+
 
 \section{Discussion}
 
+For a future experiment, it would be suggested that the polyplex cells are treated in 3 hour increments from 3 hours to 24 hours.
 
 
 \section{Conclusion}
-    This section summarizes the paper.
+The mRNA was purified and converted to cDNA. THe resulting concentration was relatively high compared to peers. This eludes that the
+treatment for these cells of polycationic DNA for 24 hours could result in higher transcription rates.
+
+
+\section{Figures}
+  \begin{table}[!hbt]
+    % Center the table
+    \begin{center}
+    % Fold Inductions
+    \caption{Simulation Parameters}
+    \label{tab:simParameters}
+    % Table itself: here we have two columns which are centered and have lines to the left, right and in the middle: |c|c|
+    \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+      \hline
+      Wells & 1 & 2 & 3 & 4 & 5 & 6\\
+      \hline
+      A & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      \hline
+      B & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      \hline
+      C & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      \hline
+      D & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      \hline
+      E & Ts & Ni & AV & Ts & Ni & AV\\
+      \hline
+      E & Ts & Ni & AV & Ts & Ni & AV\\
+      \hline
+      G & Mi -RT & Mi NTC & & Mi -RT & Mi NTC & \\
+      \hline
+      H & & & & & &\\
+      \hline
+    \end{tabular}
+    \end{center}
+  \end{table}
+
+  \begin{table}[!hbt]
+    % Center the table
+    \begin{center}
+    % Fold Inductions
+    \caption{Simulation Parameters}
+    \label{tab:simParameters}
+    % Table itself: here we have two columns which are centered and have lines to the left, right and in the middle: |c|c|
+    \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+      \hline
+      Wells & 7 & 8 & 9 & 10 & 11 & 12 \\
+      \hline
+      A & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      \hline
+      B & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      \hline
+      C & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      \hline
+      D & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      \hline
+      E & Ts & Ni & AV & Ts & Ni & AV\\
+      \hline
+      E & Ts & Ni & AV & Ts & Ni & AV\\
+      \hline
+      G & Mi -RT & Mi NTC & & Mi -RT & Mi NTC & \\
+      \hline
+      H & & & & & &\\
+      \hline
+    \end{tabular}
+    \end{center}
+  \end{table}
+
 
 % Now we need a bibliography:
 \begin{thebibliography}{5}
-
     %Each item starts with a \bibitem{reference} command and the details thereafter.
     \bibitem{HOP96} % Transaction paper
     J.~Hagenauer, E.~Offer, and L.~Papke. Iterative decoding of binary block
