Added a sentence for the introduction.

--- a/report.tex
+++ b/report.tex
@@ -32,6 +32,10 @@
     % \PARstart{}{} creates a tall first letter for this first paragraph
     %\PARstart{T}{his} section introduces the topic and leads the reader on to the main part.
 
+
+For the immunological transcripts IL6 and TNFA will be used to see if they will have an effect on the amplification of DNA.
+
+
     The mRNA sampl
 
 Test the effects on
