--- a/report.tex
+++ b/report.tex
@@ -68,7 +68,22 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
 \section{Methods}
     \subsection{Purification}
 
-      mRNA
+      \begin{enumerate}
+        \item Thaw poly treated cells in trizol on ice.
+        \item Phase separation
+        \begin{enumerate}
+          \item Incubate polytreated cells + Trizol mixture for 5 min.
+        \end{enumerate}
+        \item Add 0.2mL of chloroform per 1mL of Trizol reagent.
+%          \begin{equation}
+%            600 $\mu$L of Trizol * frac{0.2$\muL$ of choloform}{1$\mu$L of Trizol}
+%          \end{equation}
+        \item Shake tuper vigorously by hand for 15 seconds.
+        \item Incubate for 2-3 minutes.
+        \item Centrifuge sample at 12,000 g for 15 min at 4 degrees.
+        \item Remove aquesous phase of sample by angling tube at 45 degrees and pipetting solution out and transfer to new tube.
+
+      \end{enumerate}
 
     \subsection{Reverse Transcription}
 
@@ -102,11 +117,11 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
             \hline
             +RT & -RT \\
             \hline
-            4$\mu$L 5x Reaction Mix & 4$\mu$L 5x Reaction Mix
+            4$\mu$L 5x Reaction Mix & 4$\mu$L 5x Reaction Mix \\
             \hline
-            2$\mu$L Maxima Enzyme Mix & 2$\mu$L DEPC H20
+            2$\mu$L Maxima Enzyme Mix & 2$\mu$L DEPC H20 \\
             \hline
-            4$\mu$L Nuclease Free Water & 4$\mu$L Nuclease Free Water
+            4$\mu$L Nuclease Free Water & 4$\mu$L Nuclease Free Water \\
             \hline
           \end{tabular}
           \end{center}
@@ -144,6 +159,7 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
 
       Adding supermix, following charts from above and water makex mix.
 
+      The QPCR was ran for 40 cycles.
     \subsection{Analysis}
         Used $\Delta$\Delta$ct method was used in calculating fold inductions.
 
