--- a/pdf/report.tex
+++ b/pdf/report.tex
@@ -67,23 +67,14 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
 % Main Part
 \section{Methods}
     \subsection{Purification}
+      The cells in trizol were thawed before phase separation. During phase separation,
+      the poly treated cells in trizol were incubated for a duration of 5 minutes. An addition of chloroform was then added
+      to the homoginized sample according to the ratio of 0.2mL of chloroform was added for every 1mL of Trizol reagent.
+      The homoginized sample was incubated following a vigorous shake. The sample was then centrifuged for 15 min and the aqueous phase
+      was removed and stored in a second tube. Isopropanol was added to the aqueous phase at a ratio of 0.5$\mu$L of isopropanol per 1$\mu$ of Trizol.
+      Solution was centrifuged for 20 min and remove ethanol leaving only the pellet. Resuspend pellet in RNase free water. Incubate in heat block at 42C for 10-15 min.
 
-      \begin{enumerate}
-        \item Thaw poly treated cells in trizol on ice.
-        \item Phase separation
-        \begin{enumerate}
-          \item Incubate polytreated cells + Trizol mixture for 5 min.
-        \end{enumerate}
-        \item Add 0.2mL of chloroform per 1mL of Trizol reagent.
-          \begin{equation}
-            600 $\mu$L of Trizol * frac{0.2$\muL$ of choloform}{1$\mu$L of Trizol}
-          \end{equation}
-        \item
-        \item
-        \item
-      \end{enumerate}
-
-    \subsection{Reverse Transcription}
+    \subsection{cDNA Synthesis}
 
         \begin{table}[!hbt]
           % Center the table
@@ -158,6 +149,9 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
       Adding supermix, following charts from above and water makex mix.
 
       The QPCR was ran for 40 cycles.
+
+    \subsection{Gel Electrophoresis}
+
     \subsection{Analysis}
         Used $\Delta$\Delta$ct method was used in calculating fold inductions.
 
@@ -198,6 +192,14 @@ The mRNA was purified and converted to cDNA. THe resulting concentration was rel
 treatment for these cells of polycationic DNA for 24 hours could result in higher transcription rates.
 
 \section{Figures}
+
+  \begin{itemize}
+    \item Columns 1-3 IL6
+    \item Columns 4-6 INF$\alpha$
+    \item Columns 7-9 $\beta$-acting
+    \item Columns 10-12 RPL13A
+  \end{itemize}
+
   \begin{table}[!hbt]
     % Center the table
     \begin{center}
@@ -229,17 +231,13 @@ treatment for these cells of polycationic DNA for 24 hours could result in highe
     \end{center}
   \end{table}
 
-Tasha (Ts)
-Micah (Mi)
-Nick (Ni)
-Austin (AV)
--rt controls
-NTC
+%Tasha (Ts) Poly24
+%Micah (Mi) No Wash
+%Nick (Ni) Just Cells
+%Austin (AV) Poly24
+%-rt controls
+%NTC
 
-  Columns 1-3 IL6
-  Columns 4-6 INF&\alpha&
-  Columns 7-9 &\beta&-acting
-  Columns 10-12 RPL13A
 
   \begin{table}[!hbt]
     % Center the table
