Cleaned up methods for rna purification

--- a/report.tex
+++ b/report.tex
@@ -66,13 +66,12 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
 
 % Main Part
 \section{Methods}
-    \subsection{Purification}
+    \subsection{RNA Purification}
       The cells in trizol were thawed before phase separation. During phase separation,
-      the poly treated cells in trizol were incubated for a duration of 5 minutes. An addition of chloroform was then added
-      to the homoginized sample according to the ratio of 0.2mL of chloroform was added for every 1mL of Trizol reagent.
-      The homoginized sample was incubated following a vigorous shake. The sample was then centrifuged for 15 min and the aqueous phase
-      was removed and stored in a second tube. Isopropanol was added to the aqueous phase at a ratio of 0.5$\mu$L of isopropanol per 1$\mu$ of Trizol.
-      Solution was centrifuged for 20 min and remove ethanol leaving only the pellet. Resuspend pellet in RNase free water. Incubate in heat block at 42C for 10-15 min.
+      the poly treated cells in trizol were incubated after which an addition of chloroform was added.
+      The homoginized sample was incubated following a vigorous shake. The sample was then centrifuged before transfering the aqueous phase
+      to a second tube. Isopropanol was added to the aqueous phase. The solution underwent a series of centrifuges in between removing ethanol
+      resulting in an RNA pellet. The pellet was incubated following a resuspension in RNase free water.
 
     \subsection{cDNA Synthesis}
 
