Compressing tables down to paragraphs

--- a/report.tex
+++ b/report.tex
@@ -74,46 +74,9 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
       resulting in an RNA pellet. The pellet was incubated following a resuspension in RNase free water.
 
     \subsection{cDNA Synthesis}
-
-        \begin{table}[!hbt]
-          % Center the table
-          \begin{center}
-          \caption{cDNA Concentrations}
-          \label{tab:simParameters}
-          \begin{tabular}{|c|c|}
-            \hline
-            +RT & -RT \\
-            \hline
-            1$\mu$L 10x dsDNase Buffer & 10x 1$\muu$L 10x dsDNase Buffer \\
-            \hline
-            1$\mu$L dsDNase & 1$\muu$L dsDNase \\
-            \hline
-            1$\mu$L Template RNA & 1$\muu$L Template RNA \\
-            \hline
-            2$\mu$L Total RNA (Poly24) & 2$\muu$L Total RNA (Poly24) \\
-            \hline
-          \end{tabular}
-          \end{center}
-        \end{table}
-
-        \begin{table}[!hbt]
-          % Center the table
-          \begin{center}
-          \caption{cDNA Concentrations}
-          \label{tab:simParameters}
-          \begin{tabular}{|c|c|}
-            \hline
-            +RT & -RT \\
-            \hline
-            4$\mu$L 5x Reaction Mix & 4$\mu$L 5x Reaction Mix \\
-            \hline
-            2$\mu$L Maxima Enzyme Mix & 2$\mu$L DEPC H20 \\
-            \hline
-            4$\mu$L Nuclease Free Water & 4$\mu$L Nuclease Free Water \\
-            \hline
-          \end{tabular}
-          \end{center}
-        \end{table}
+      For the first step of cDNA Synthesis, a mixture was formed from the following compounds:
+      10x dsDNase Buffer, dsDNase, Template RNA, polyplex 24hour RNA and nuclease free water.
+      Both solutions were incubated after being centrifuged.
 
     \subsection{Qt PCR}
 
