Updated cDNA synthesis.

--- a/report.tex
+++ b/report.tex
@@ -64,7 +64,6 @@ No Wash
 
 It is virtually impossible to completely eliminate all genomic DNA from RNA preparations. Therefore, if the assay is not cDNA-specific, it is important to include a minus-reverse transcriptase ("-RT") control in real-time RT-PCR experiments. Typically, the "-RT" control is a mock reverse transcription containing all the RT-PCR reagents, except the reverse transcriptase. The presence of an amplification product in the "-RT" control is indicative of contaminating DNA in the sample.”
 
-% Main Part
 \section{Methods}
     \subsection{RNA Purification}
       The cells in trizol were thawed before phase separation. During phase separation,
@@ -74,9 +73,11 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
       resulting in an RNA pellet. The pellet was incubated following a resuspension in RNase free water.
 
     \subsection{cDNA Synthesis}
-      For the first step of cDNA Synthesis, a mixture was formed from the following compounds:
+      For the first step of cDNA Synthesis, two solutions (+RT/-RT) were formed from the following compounds:
       10x dsDNase Buffer, dsDNase, Template RNA, polyplex 24hour RNA and nuclease free water.
-      Both solutions were incubated after being centrifuged.
+      Both solutions were incubated after being centrifuged. The solutions were then chilled on ice, centrifuged and placed back on ice.
+      For both solutions, 5X Reaction mix and nuclease free water was added. In the +RT solution, Maxima Enzyme mix (reverse transcriptase) was added to the mixture.
+      The -RT solution used DEPC H20 instead of Maxima Enzyme mix.
 
     \subsection{Qt PCR}
 
