--- a/report.tex
+++ b/report.tex
@@ -77,7 +77,8 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
       10x dsDNase Buffer, dsDNase, Template RNA, polyplex 24hour RNA and nuclease free water.
       Both solutions were incubated after being centrifuged. The solutions were then chilled on ice, centrifuged and placed back on ice.
       For both solutions, 5X Reaction mix and nuclease free water was added. In the +RT solution, Maxima Enzyme mix (reverse transcriptase) was added to the mixture.
-      The -RT solution used DEPC H20 instead of Maxima Enzyme mix.
+      The -RT solution used DEPC H20 instead of Maxima Enzyme mix so that the -RT solution can simulate the +RT solution without synthesizing RNA into cDNA.
+      When the -RT solution undergoes QtPCR, any contaminating genomic DNA will be amplified.
 
     \subsection{Qt PCR}
 
