--- a/report.tex
+++ b/report.tex
@@ -34,6 +34,8 @@
 \section{Introduction}
     \PARstart{T}{his} section introduces the topic and leads the reader on to the main part.
 
+
+
     Real Time PCR
       Generate large quantity of DNA from cDNA templates. Can view amount of DNA in each cycle.
       Can be seen if immunological response was indicated.
@@ -116,14 +118,13 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
       The QPCR was ran for 40 cycles.
 
     \subsection{Gel Electrophoresis}
-
-
-      The following was loaded in to the wells:
-      \begin{enumerate}
-      \end{enumerate}
+      In order to further understand the results gained from the QtPCR, an agarose gel was ran.
+      The wells were constructed in the following manner: (1) asdf, (2) asdf, (3) asdf
 
     \subsection{Analysis}
-        Used $\Delta$\Delta$ct method was used in calculating fold inductions.
+      The results from the QtPCR produced Ct values from each well.
+      A Ct value is a numeric inverse correlation to the quantity of nucleic acid detected by the aparatus.
+      The Ct values can be used in combination with the $\Delta$\Delta$ct formula to produce fold inductions.
 
 \section{Results}
 
@@ -236,7 +237,40 @@ treatment for these cells of polycationic DNA for 24 hours could result in highe
     \end{center}
   \end{table}
 
-\includegraphics{gel}
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=8cm]{gel}
+    \caption{a nice plot}
+    \label{fig:mesh1}
+  \end{figure}
+
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=8cm]{graph}
+    \caption{a nice plot}
+    \label{fig:mesh1}
+  \end{figure}
+
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=8cm]{graph}
+    \caption{a nice plot}
+    \label{fig:mesh1}
+  \end{figure}
+
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=8cm]{graph}
+    \caption{a nice plot}
+    \label{fig:mesh1}
+  \end{figure}
+
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=8cm]{graph}
+    \caption{a nice plot}
+    \label{fig:mesh1}
+  \end{figure}
 
 % Now we need a bibliography:
 \begin{thebibliography}{5}
